# StreamVerse

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  index.html  package-lock.json  package.json  requirements-douyin-helper.txt  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yml  release-packs.yml
.reasonix/skills/: code-reviewer.md  fix.md  frontend-design.md  optimizing-tokens.md  pr-creator.md  update-docs.md
docs/: codex-skills-guide.md  maintainer-context.md  project-rules.md  roadmap.md
registry/: plugins.json
scripts/: bilibili_profile_bridge.py  douyin_bridge.py  douyin_inspect.mjs  generate_release_registry.py  package_pack_bundle.py  profile_browser_scan.py
src/: App.svelte  app.css  tokens.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/streamverse/: README.md  icon.icns
src-tauri/src/: chrome_cookie_unlock_plugin.py  douyin.rs  download_history.rs  formats.rs  main.rs  media_contract.rs  pack_common.rs  pack_host.rs  pack_manager.rs  pack_registry.rs  parser.rs  platforms.rs  providers.rs  settings.rs  task_store.rs  ytdlp.rs
src-tauri/src/ytdlp/: artifact.rs  controller.rs  mod.rs
src/lib/: backend.ts  i18n.ts  media.ts  mock.ts  options.ts  types.ts  workspace-state.ts
src/lib/components/: HistoryPanel.svelte  PlatformHome.svelte  ProfileBatchWorkspace.svelte  SettingsPanel.svelte  SharedDirectoryBar.svelte  SingleVideoWorkspace.svelte  TaskQueuePanel.svelte
src/lib/locales/: en.json  zh-CN.json
