[package]
name = "streamverse"
version = "0.1.4"
description = "Desktop downloader for Douyin, Bilibili, YouTube and more"
authors = ["Codex"]
edition = "2021"
default-run = "streamverse"
autobins = false

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rookie = "0.5"
tauri = { version = "2.1.1", features = [] }
tauri-plugin-notification = "2"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Com", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSView"] }
objc2-foundation = "0.3"
objc2-quartz-core = { version = "0.3", features = ["CALayer"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "streamverse"
path = "src/main.rs"

[[bin]]
name = "streamverse-pack-douyin"
path = "src/bin/streamverse-pack-douyin.rs"

[[bin]]
name = "streamverse-pack-bilibili"
path = "src/bin/streamverse-pack-bilibili.rs"

[[bin]]
name = "streamverse-pack-youtube"
path = "src/bin/streamverse-pack-youtube.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
